--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,4 +1,4 @@
-# This is the resource bundle for QA_REJECTION_SRV
+# This is the resource bundle for qa_rejection_srv
 
 #Texts for manifest.json
 
@@ -11,4 +11,4 @@ appDescription=An SAP Fiori application.
 title=Quality Rejection KPI
 
 #XFLD,48
-QA_REJECTION_SRV-manage.flpTitle=Quality Rejection KPI
+qa_rejection_srv-manage.flpTitle=Quality Rejection KPI
